--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,16 @@
 {
   "version": 2,
   "builds": [
-    { "src": "/app.js", "use": "@vercel/node" }
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/app.js" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    }
   ],
   "env": {
     "MONGODB_URI": "@mongodb_uri"
