--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
   "version": 2,
-  "installCommand": "cd frontend && npm install --include=dev",
-  "buildCommand": "cd frontend && npm run build",
+  "buildCommand": "cd frontend && npm install --include=dev && npm run build",
   "outputDirectory": "frontend/dist",
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/backend/api/index.js"
+      "destination": "/backend/api"
     },
     {
       "source": "/(.*)",
